Fixed the Endpoint security Issue,configured Logout Aswell