@@ -1,21 +1,25 @@
 package com.helium.oakcollectionsadmin.jwt;
 
-import com.helium.oakcollectionsadmin.entity.UserInfo;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.Cookie;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.List;
+import java.util.stream.Collectors;
+
 
 @Component
+@Slf4j
 public class JwtAuthFilter extends OncePerRequestFilter {
 
     private final JwtUtil jwtUtil;
@@ -51,9 +55,10 @@ public class JwtAuthFilter extends OncePerRequestFilter {
                 List<String> roles = jwtUtil.extractRoles(token); // You'll need this
 
                 // Convert roles to GrantedAuthority
-                var authorities = roles.stream()
-                        .map(role -> new org.springframework.security.core.authority.SimpleGrantedAuthority(role))
-                        .toList();
+                List<GrantedAuthority> authorities = roles.stream()
+                        .map(role -> new  SimpleGrantedAuthority(role))
+                        .collect(Collectors.toList());
+                log.info("User: " + username + ", roles: " + roles);
 
                 // 3. Create authentication object
                 UsernamePasswordAuthenticationToken auth =
